--- a/templates/index.html
+++ b/templates/index.html
@@ -204,6 +204,9 @@
         let isLoading = false;
         let inSearch = true;
         let searchTags = "";
+        let gridCount = 0;
+        let modalViewMode = false;
+        let curModalGridNum = 0;
 
         {% if tags %}
             searchTags = "{{ tags }}";
@@ -285,6 +288,11 @@
         }
 
         function addImageToGrid(post){
+            if(post.is_hidden){
+                //skip this one if its hidden
+                return;
+            }
+
             //the conatiner for the grid
             const bufferContainer = document.createElement('div');
             const gridContainer = document.createElement('div');
@@ -296,17 +304,38 @@
             imgElement.src = post.preview.url;
             imgElement.classList.add('media-item');
 
-            //click the image to go to modal view
-            imgElement.onclick = function() {
-                showModal(post);
+            imgElement.onclick = function(event) {
+                if(event.ctrlKey){
+                    removeModal(post.id);
+                }else{
+                    showModal(post);
+                }
             };
+
+            let my_vote = 0;
+            if (post.score.hasOwnProperty('my_vote')) {
+                my_vote = post.score.my_vote;
+            }else{
+                //if my_score doesnt exist then we have no entry in the db. so highlight this as 'new'
+                bufferContainer.style.backgroundColor = "var(--color-section-lighten-5)";
+            }      
 
             //the text label
             const textDiv = document.createElement('div');
             textDiv.style.padding = "5px";
             textDiv.classList.add('caption-box');
-            //textDiv.innerHTML = post.id + ' ' + post.rating + '<br>'; ////////////remove when done debugging
-            textDiv.innerHTML += '🏆' + post.score.total + ' 💕' + post.fav_count + ' 📖' + post.comment_count;
+
+            if(my_vote < 0)
+                textDiv.innerHTML = '👎<br>';
+            if(my_vote > 0)
+                textDiv.innerHTML = '👍<br>';
+            
+            //textDiv.innerHTML += `<div style="display: flex; flex-direction: row; justify-content: space-between;">`;
+            textDiv.innerHTML += `🏆<p id="score_${post.id}">` + post.score.total + '</p> ';
+            textDiv.innerHTML += `💕<p id="fav_${post.id}">` + post.fav_count + '</p> ';
+            textDiv.innerHTML += '📖' + post.comment_count;
+            //textDiv.innerHTML += '</div>';
+
             post.tags.artist.forEach(artistName => {
                 textDiv.innerHTML += `<br><a href="/search?tags=${artistName}" class="tags-artist">` + artistName + '</a>';
             });
@@ -319,15 +348,12 @@
             if (fileType === 'gif')
                 gridContainer.style.backgroundColor = "var(--color-section-lighten-10)"; 
             if (isFavorited === true)
-                bufferContainer.style.backgroundColor = "white";  
+                bufferContainer.style.backgroundColor = "white";
+
             bufferContainer.setAttribute('post_id', post.id.toString()); 
             bufferContainer.setAttribute('is_favorited', post.is_favorited.toString());
-            
-            let my_vote = 0;
-            if (post.score.hasOwnProperty('my_vote')) {
-                my_vote = post.score.my_vote;
-            }
-
+            bufferContainer.id=`grid_num_${gridCount}`;
+            bufferContainer.setAttribute('grid_num', gridCount);
             bufferContainer.setAttribute('my_vote', my_vote); 
             bufferContainer.setAttribute('down_vote', post.score.down); 
             bufferContainer.setAttribute('up_vote', post.score.up); 
@@ -338,6 +364,7 @@
             gridContainer.append(textDiv);
             bufferContainer.append(gridContainer);
             grid.append(bufferContainer);
+            gridCount++;
         }
 
         function fetchPosts() {
@@ -385,12 +412,70 @@
             }
         };
 
+        window.addEventListener('keydown', function(event) {
+            let newGridNum = null;
+            let tempGrid;
+
+            if(!modalViewMode)
+                return;
+
+            console.log(`curModalGridNum=${curModalGridNum}, gridCount=${gridCount}, event=${event.keyCode}`);
+            
+            //left key, go down in numbers
+            if (event.keyCode === 37) {
+                for(i=curModalGridNum-1; i>=0; i--){
+                    tempGrid = getElementFromGridID(i);
+                    if(!tempGrid.hasAttribute('is_hidden')){
+                        newGridNum = i;
+                        break;
+                    }
+                }
+            }
+
+            // right, go up in numbers
+            if (event.keyCode === 39) {
+                console.log(`right keypress`);
+                for(i=curModalGridNum+1; i<= gridCount; i++){
+                    tempGrid = getElementFromGridID(i);
+                    console.log(`i=${i}, is_hidden=${tempGrid.hasAttribute('is_hidden')}`);
+                    if(!tempGrid.hasAttribute('is_hidden')){
+                        newGridNum = i;
+                        console.log(`found at: ${i}`);
+                        break;
+                    }
+                }
+            }
+
+            if(newGridNum != null){
+                curModalGridNum = newGridNum;
+                const tempContainer = getElementFromGridID(curModalGridNum);
+                const imgElement = tempContainer.querySelector('img');
+                resetModal();
+                imgElement.dispatchEvent(new Event('click'));
+            }            
+        });
+
+        function removeModal(post_id){
+            const gridContainer = getElementFromPostID(post_id);
+            const queryArgs = [];
+            queryArgs.push(`post_id=${post_id}`);
+            queryArgs.push(`is_hidden=${true}`);
+            fetch(generateQueryUrl('/hide', queryArgs))
+            .then(response => response.json())
+            .then(data => {
+                gridContainer.style.display = "none";
+                gridContainer.setAttribute('is_hidden', 'true');
+            });
+        }
+
         function showModal(post) {
             const mediaUrl = post.file.url;
             const fileType = post.file.ext; 
             const modalContent = document.getElementById('modal-content');
             modalContent.innerHTML = ''; 
+            modalViewMode = true;
 
+            //Img/media element
             let mediaElement;
             if (fileType === 'webm') {
                 mediaElement = document.createElement('video');
@@ -404,6 +489,7 @@
                 mediaElement.style.width = '100%';
             }
 
+            //Favorite & up-down vote button bar
             const favDiv = document.createElement('div');
             const spacerDiv = document.createElement('div');
             const upDiv = document.createElement('div');
@@ -428,6 +514,7 @@
             upDiv.innerText = containerDiv.getAttribute('up_vote');
             downDiv.innerText = containerDiv.getAttribute('down_vote');
             scoreDiv.innerText = containerDiv.getAttribute('total_vote');
+            curModalGridNum = +containerDiv.getAttribute('grid_num'); //add a + to make it an int
 
             favDiv.classList.add('button-div');
             upDiv.classList.add('button-div');
@@ -446,6 +533,7 @@
                 downDiv.style.backgroundColor = "var(--color-success)";
             }
 
+            //assemble the fav button bar
             favDivContainer.style = "display: flex; justify-content: space-between; align-items: center;";
             setFavoriteButton(getIsFavorited(post.id), favDiv, post.id);
             favDivContainer.appendChild(favDiv);
@@ -454,6 +542,7 @@
             favDivContainer.appendChild(scoreDiv);
             favDivContainer.appendChild(downDiv);
 
+            //text display area with specs
             const textDiv = document.createElement('div');
             textDiv.style.paddingTop = '10px'; 
             textDiv.style.paddingBottom = '10px'; 
@@ -462,6 +551,7 @@
             textDiv.innerHTML += 'id: ' + post.id + '<br>';
             textDiv.innerHTML += 'rating: ' + post.rating + '<br>';
             textDiv.innerHTML += 'fav count: ' + post.fav_count + '<br>';
+            textDiv.innerHTML += 'comments: ' + post.comment_count + '<br>';
 
             textDiv.innerHTML += 'pools: ';
             post.pools.forEach(datapoint => {textDiv.innerHTML += ' ' + datapoint;});
@@ -469,55 +559,21 @@
             textDiv.innerHTML += `<br><a href="https://e621.net/posts/${post.id}" class="tags-artist" target="_blank">Show on e621.net</a><br>`
 
             textDiv.innerHTML += '<b>Description:</b> ' + post.description + '<br>';
-/*
-sources The source field of the post.
-pools An array of Pool IDs that the post is a part of.
-relationships (array group)
-    parent_id The ID of the post’s parent, if it has one.
-    has_children If the post has child posts (True/False)
-    has_active_children
-    children A list of child post IDs that are linked to t
-*/
 
+            //Tags list
             const tagsDiv = document.createElement('div');
             tagsDiv.classList.add('tag-container');
             tagsDiv.innerHTML = '';
 
-            tagsDiv.innerHTML += '<b>Artist</b><br>';
-            post.tags.artist.forEach(datapoint => {
-                tagsDiv.innerHTML += `<a href="/search?tags=${datapoint}" class="tags-artist">` + datapoint + '</a><br>';
+            Object.keys(post.tags).forEach(categoryKey => {
+                let categoryName = categoryKey.charAt(0).toUpperCase() + categoryKey.slice(1); // Capitalize the first letter
+                tagsDiv.innerHTML += `<br><b>${categoryName}</b><br>`;
+                post.tags[categoryKey].forEach(datapoint => {
+                    tagsDiv.innerHTML += `<a href="/search?tags=${datapoint}" class="tags-${categoryKey}">${datapoint}</a><br>`;
+                });
             });
-
-            tagsDiv.innerHTML += '<br><b>Character</b><br>';
-            post.tags.character.forEach(datapoint => {
-                tagsDiv.innerHTML += `<a href="/search?tags=${datapoint}" class="tags-character">` + datapoint + '</a><br>';
-            });
-
-            tagsDiv.innerHTML += '<br><b>Copyright</b><br>';
-            post.tags.copyright.forEach(datapoint => {
-                tagsDiv.innerHTML += `<a href="/search?tags=${datapoint}" class="tags-copyright">` + datapoint + '</a><br>';
-            });
-
-            tagsDiv.innerHTML += '<br><b>Tags</b><br>';
-            post.tags.species.forEach(datapoint => {
-                tagsDiv.innerHTML += `<a href="/search?tags=${datapoint}" class="tags-species">` + datapoint + '</a><br>';
-            });
-
-            tagsDiv.innerHTML += '<br><b>General</b><br>';
-            post.tags.general.forEach(datapoint => {
-                tagsDiv.innerHTML += `<a href="/search?tags=${datapoint}" class="tags-general">` + datapoint + '</a><br>';
-            });
-
-            tagsDiv.innerHTML += '<br><b>Lore</b><br>';
-            post.tags.lore.forEach(datapoint => {
-                tagsDiv.innerHTML += `<a href="/search?tags=${datapoint}" class="tags-lore">` + datapoint + '</a><br>';
-            });
-
-            tagsDiv.innerHTML += '<br><b>Meta</b><br>';
-            post.tags.meta.forEach(datapoint => {
-                tagsDiv.innerHTML += `<a href="/search?tags=${datapoint}" class="tags-meta">` + datapoint + '</a><br>';
-            });
-
+            
+            //assemble the modal structure
             const contentDiv = document.createElement('div');
             contentDiv.id = 'content-divider';
             contentDiv.appendChild(mediaElement);
@@ -532,10 +588,15 @@ relationships (array group)
 
         window.onclick = function(event) {
             if (event.target == document.getElementById('modal')) {
-                document.getElementById('modal-content').innerHTML = '';
-                document.getElementById('modal').style.display = "none";
+                modalViewMode = false;
+                resetModal();
             }
         };
+        
+        function resetModal(){
+            document.getElementById('modal-content').innerHTML = '';
+            document.getElementById('modal').style.display = "none";
+        }
 
         function doVotes(post_id, score){
             changeCursor();
@@ -647,6 +708,10 @@ relationships (array group)
                     return divElements[i];
                 }
             }
+        }
+
+        function getElementFromGridID(grid_id) {
+            return document.getElementById(`grid_num_${grid_id}`);
         }
 
         function changeCursor() {
